--- a/index2.html
+++ b/index2.html
@@ -6,6 +6,6 @@
     <title>hello git</title>
 </head>
 <body>
-    <h1>hello git2</h1>
+    <h1 style="color: blueviolet;">hello git2</h1>
 </body>
 </html>
