--- a/index2.html
+++ b/index2.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     <h1 style="color: black;">hello git2</h1>
+    <div>
+        this is add line text in index2.html
+    </div>
+    <div>
+        add another line in index2.html
+    </div>
 </body>
 </html>
